--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <!-- Use action="/create-checkout-session.php" if your server is PHP based. -->
-    <form action="/create-checkout-session" method="POST">
+    <form action="/connectStripe.go" method="POST">
       <button type="submit">Checkout</button>
     </form>
   </body>
