--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
   <body>
     <!-- Use action="/create-checkout-session.php" if your server is PHP based. -->
     <form action="create-checkout-session" method="POST">
-      <button type="submit">Checkout</button>
+      <button type="submit">Checkout!</button>
     </form>
   </body>
 </html>
