--- a/stripe/checkout.html
+++ b/stripe/checkout.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <!-- Use action="/create-checkout-session.php" if your server is PHP based. -->
-    <form action="/stripe/create-checkout-session" method="POST">
+    <form action="/stripe/checkout-session.go" method="POST">
       <button type="submit">Checkout!</button>
     </form>
   </body>
