--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Stripe Checkout Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://js.stripe.com/v3/"></script>
+  </head>
+  <body>
+    <section>
+      <div class="product">
+        <img src="https://example.com/product-image.jpg" alt="Product Image" />
+        <div class="description">
+          <h3>Product Name</h3>
+          <h5>$19.99</h5>
+        </div>
+      </div>
+      <button id="checkout-button">Checkout</button>
+    </section>
+
+
+    <script>
+        var stripe = Stripe("pk_test_51NLn6uAMAaJjSlCR3513yxA4gAFYqP5MxJ9SgqNZWKlrLiMN8j4hMOI4F7lo55qkEWHIDH3GN1VIckSP0gjK2sxJ00R6ZjXfNL");
+      
+        document.getElementById("checkout-button").addEventListener("click", function() {
+          stripe.redirectToCheckout({
+            lineItems: [{ price: "price_1NV2QDAMAaJjSlCRiEu2dCwV", quantity: 1 }],
+            mode: "payment",
+            successUrl: "http://localhost:5500/success.html",
+            cancelUrl: "http://localhost:5500/cancel.html"
+          });
+        });
+      </script>
+  </body>
+</html>
