--- a/checkout/client/index.html
+++ b/checkout/client/index.html
@@ -26,8 +26,8 @@
             lineItems: [{ price: "price_1NV2QDAMAaJjSlCRiEu2dCwV", quantity: 1 }],
             mode: "payment",
             //mode: "setup",
-            successUrl: "http://localhost:5500/success.html",
-            cancelUrl: "http://localhost:5500/cancel.html"
+            successUrl: "https://localhost:8080/client/success.html",
+            cancelUrl: "https://localhost:8080/client/cancel.html"
           });
         });
       </script>
