--- a/checkout/client/checkout.html
+++ b/checkout/client/checkout.html
@@ -8,7 +8,7 @@
   <body>
     <section>
       <div class="product">
-        <img src="images/Galaxy_Me.png" alt="The cover of Stubborn Attachments" />
+        <img src="client/images/Galaxy_Me.png" alt="The cover of Stubborn Attachments" />
         <div class="description">
           <h3>Stubborn Attachments</h3>
           <h5>$20.00</h5>
