change image path

--- a/checkout/client/index.html
+++ b/checkout/client/index.html
@@ -8,7 +8,7 @@
   <body>
     <section>
       <div class="product">
-        <img src="/images/Galaxy_Me.png" alt="Product Image" width="200px"/>
+        <img src="/client/images/Galaxy_Me.png" alt="Product Image" width="200px"/>
         <div class="description">
           <h3>Product Name</h3>
           <h5>$19.99</h5>
